# gtm-lead-discovery-agent

./: .env.example  .gitignore  JOB_SCRAPING_AGENT.md  README.md  main.py  pyproject.toml  requirements.txt
src/gtm_agent/: __init__.py
src/gtm_agent/config/: __init__.py  settings.py
src/gtm_agent/core/: browser.py  canary_store.py  compliance_store.py  fetch.py  lead_store.py  lifecycle_store.py  logging.py  metrics.py  robots.py  run_ledger.py  scoring_store.py  title_classification_cache.py
src/gtm_agent/discovery/: ats_detection.py  ats_platforms.py  canary.py  canary_targets.py  lifecycle.py  llm_residue.py  (+2 more)
tests/: test_apollo_client.py  test_apollo_reveal.py  test_ashby_adapter.py  test_ats_detection.py  test_browser.py  test_budget.py  test_canary.py  test_canary_store.py  test_company_context.py  test_compliance.py  test_enrichment.py  test_feedback.py  test_fetch.py  test_generic_html_adapter.py  test_greenhouse_adapter.py  test_jsonld_adapter.py  test_lead_discovery.py  test_lead_matching.py  test_lead_store.py  test_lever_adapter.py  test_lifecycle.py  test_lifecycle_store.py  test_llm_residue.py  test_main_stage_transitions.py  test_matching_golden_set.py  test_matching_metrics.py  test_metrics.py  test_normalization.py  test_normalization_ats_platforms.py  test_pdl_client.py  test_persona_gap.py  test_personas.py  test_recruitee_adapter.py  test_rendered_dom_adapter.py  test_rippling_adapter.py  test_robots.py  test_run_ledger.py  test_scoring_publication.py  test_scoring_ranking.py  test_scoring_rationale.py  (+9 more)
tests/fixtures/: matching_golden_set.json
(+60 files in other folders)
