[project]
name = "gtm-lead-discovery-agent"
version = "0.1.0"
description = "GTM Lead Discovery Agent — Phase 1: Job Discovery pipeline foundation"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
